# char-transformers

./: .gitignore  CMakeLists.txt  README.md  document.txt  main
data/: raw.txt
src/: main.cpp
src/data/: dataset.cpp  dataset.hpp  vocab.cpp  vocab.hpp
src/engine/: node.hpp  ops.cpp  ops.hpp  tensor.cpp  tensor.hpp
src/math/: matrix.cpp  matrix.hpp
src/nn/: char_transformer.cpp  char_transformer.hpp  embedding.cpp  embedding.hpp  linear.cpp  linear.hpp  positional_encoding.hpp  self_attention.cpp  self_attention.hpp  transformer_block.cpp  transformer_block.hpp
src/optim/: adam.cpp  adam.hpp  sgd.cpp  sgd.hpp
